<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="developer_email" translatable="false">sinitcyn.dmitriy@mail.ru</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="Search">Поиск</string>
    <string name="Media">Медиатека</string>
    <string name="Settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>

    <string name="Share_app">Поделиться приложением</string>
    <string name="Share_app_link" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>

    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>

    <string name="text_support">Написать в поддержку</string>
    <string name="support_message_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="switch_description" translatable="false">Switch for dark theme</string>
    <string name="search_error">Ничего не нашлось</string>
    <string name="internet_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="last_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="zero_track_progress" translatable="false">00:00</string>
</resources>