<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_base">
        <ImageView
            android:id="@+id/settings_back_arrow"
            android:layout_width="@dimen/size_square_icon_base"
            android:layout_height="@dimen/size_square_icon_base"
            android:src="@drawable/arrow_back"
            android:layout_gravity="center">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_base"
            android:layout_marginStart="12dp"
            android:layout_gravity="center">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_setting_item"
            android:orientation="horizontal"
            android:padding="@dimen/padding_base">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical">
            </TextView>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_setting_item"
                android:layout_gravity="end"
                android:layout_marginTop="-16dp"></Switch>
            <!-- Мне пришлось это сделать, поскольку студия требует высоту минимум 48 dp для Switch-->
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_setting_item"
            android:padding="@dimen/padding_base">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Share_app"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical">
            </TextView>
            <ImageView
                android:layout_width="@dimen/size_square_icon_base"
                android:layout_height="@dimen/size_square_icon_base"
                android:src="@drawable/share"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_top_settings_icon">
            </ImageView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_setting_item"
            android:padding="@dimen/padding_base">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_support"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical">
            </TextView>
            <ImageView
                android:layout_width="@dimen/size_square_icon_base"
                android:layout_height="@dimen/size_square_icon_base"
                android:src="@drawable/support"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_top_settings_icon">
            </ImageView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_setting_item"
            android:padding="@dimen/padding_base">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_agreement"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical">
            </TextView>
            <ImageView
                android:layout_width="@dimen/size_square_icon_base"
                android:layout_height="@dimen/size_square_icon_base"
                android:src="@drawable/arrow_forward"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_top_settings_icon">
            </ImageView>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>